--- a/techcon_website/about.html
+++ b/techcon_website/about.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <header>
-      <h1>Tech conference</h1>
+      <h1>About TechCon 2024</h1>
       <nav>
         <ul>
           <li><a href="about.html">About</a></li>
@@ -19,14 +19,18 @@
     </header>
     <main>
       <section>
+        <h2>History</h2>
         <article>
             <img src="" alt="">
         </article>
         <article></article>
         <article></article>
       </section>
-      <section></section>
       <section>
+        <h2>Mission</h2>
+      </section>
+      <section>
+        <p>Past Speakers</p>
         <img src="" alt="">
       </section>
     </main>
