--- a/techcon_website/schedule.html
+++ b/techcon_website/schedule.html
@@ -44,9 +44,7 @@
             <td></td>
           </tr>
         </tbody>
-        <caption>
-          Detailed Schedule of Events for TechCon 2024
-        </caption>
+        <caption>Detailed Schedule of Events for TechCon 2024</caption>
       </table>
     </main>
   </body>
