--- a/techcon_website/schedule.html
+++ b/techcon_website/schedule.html
@@ -47,5 +47,8 @@
         <caption>Detailed Schedule of Events for TechCon 2024</caption>
       </table>
     </main>
+    <footer>
+      <p>&copy; All rights reserved.</p>
+    </footer>
   </body>
 </html>
