--- a/techcon_website/schedule.html
+++ b/techcon_website/schedule.html
@@ -48,7 +48,7 @@
       </table>
     </main>
     <footer>
-      <p>&copy; All rights reserved.</p>
+      <p>&copy;copyright</p>
     </footer>
   </body>
 </html>
