--- a/techcon_website/contact.html
+++ b/techcon_website/contact.html
@@ -27,7 +27,7 @@
         <label for="email">Email</label>
         <input type="email" name="email" id="email" />
         <label for="textarea"></label>
-        <textarea name="" id="textarea">Message</textarea>
+        <textarea name="" id="textarea">message</textarea>
         <button type="submit">Send Message</button>
       </form>
     </main>
